# shs-engine

./: .env.example  .gitignore  ACTION_LOG.md  AGENTS.md  COMPREHENSIVE_METHODOLOGY_WRITEUP.md  CONTRIBUTING.md  Dockerfile  Geo Data.md  IDENTITY.md  KIT_MANIFEST.json  LICENSE  MASTER_PLAN.md  MEMORY.md  Makefile  PLAN_GEO.md  README.md  TOOLS.md  USER.md  agents.md  docker-compose.yml  openapi.json  openapi.yaml  pyproject.toml  requirements-embeddings.txt  requirements-hunyuan.txt  requirements.txt  shs-lms-source  start.sh
Agent_Instructions/: 00_Manager_Planner_Agent.md  Coercion_Duress_Agent.md  Fiduciary_Duty_Negligence_Agent.md  Governance_Sovereignty_Agent.md  Land_Reduction_Trespass_Agent.md  Large_Report_Editor_Agent.md  Water_Rights_Fishing_Agent.md
Geo/: README.md
_kit_backup_20251211_182210/: .env.example  agents.md
docs/: ci-setup.md  deploy-local.md  domain-examples.md  domain-intelligence.md  embed-example.md  embed-widget.html  frontend-app-design.md  geo-intel-plan.md  geo-layers-plan.md  llm-ops-and-testing.md  llm-providers.md  local-dev-testing.md  local-walkthrough.md  map-embed.html  multi-tenant-design.md  ocr-ubuntu-deployment.md  ocr_quality_assurance_protocol.md  persistence-postgres-migration.md  roles-and-authz.md  scaling-and-ops.md  storage-shared-object.md  tenant-onboarding.md  web-demo.html  webhook-payload-example.json
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
scripts/: add-worker.sh  analyze_pdfs.py  backfill_embeddings.py  batch-ocr.sh  bootstrap_local.sh  bootstrap_shs.sh  build_geo_aoi_cache.py  demo_starter.sh  dev.sh  download_geo_data.py  embed_ocr_files.py  embed_ocr_improved.py  embeddings_smoke.py  export_openapi.py  filter_bc_interior.py  import_geo_aoi.py  import_geo_poi.py  intake_scan.py  kalm_embedding_server.py  list_projects.py  load_demo.py  local_walkthrough.sh  make_ocr_sample.py  ocr_qa_test.py  ocr_smoke.py  ocr_smoke_hunyuan.py  ocr_test_framework.py  (+20 more)
(+385 files in other folders)
